See new changes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>V2V Edtech LLP - Student Portal</title>
-    <meta name="description" content="Student Portal for Data Analysis Internship - V2V Edtech LLP" />
+    <meta name="description" content="Student Portal for Internship - V2V Edtech LLP" />
     <meta name="author" content="V2V Edtech LLP" />
 
     <meta property="og:title" content="V2V Edtech LLP - Student Portal" />
-    <meta property="og:description" content="Student Portal for Data Analysis Internship" />
+    <meta property="og:description" content="Student Portal for Data Internship" />
     <meta property="og:type" content="website" />
   
     
