--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="V2V Edtech LLP" />
 
     <meta property="og:title" content="V2V Edtech LLP - Student Portal" />
-    <meta property="og:description" content="Student Portal for Data Internship" />
+    <meta property="og:description" content="Student Portal for Internship" />
     <meta property="og:type" content="website" />
   
     
